--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "preact-render-to-string": "^6.4.0",
     "pretty-bytes": "^6.1.1",
     "pretty-time": "^1.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
@@ -99,6 +101,8 @@
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.29",
     "@types/pretty-time": "^1.1.5",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "@types/source-map-support": "^0.5.10",
     "@types/ws": "^8.5.10",
     "@types/yargs": "^17.0.32",
