--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "d3": "^7.8.5",
     "esbuild-sass-plugin": "^2.16.1",
     "flexsearch": "0.7.43",
+    "github-calendar": "^2.3.4",
     "github-slugger": "^2.0.0",
     "globby": "^14.0.1",
     "gray-matter": "^4.0.3",
