Quartz sync: May 7, 2024, 3:18 PM

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format": "npx prettier . --write",
     "test": "tsx ./quartz/util/path.test.ts && tsx ./quartz/depgraph.test.ts",
     "profile": "0x -D prof ./quartz/bootstrap-cli.mjs build --concurrency=1",
-    "vamos": "npx quartz build && npx quartz sync"
+    "vamos": "npx quartz build && npx quartz sync",
+    "dev": "npx quartz build --serve"
   },
   "engines": {
     "npm": ">=9.3.1",
